2006-05-05 Borut Razem <borut.razem AT siol.net>

	* Makefile: include lib/doc-archive.mk
	* lib/doc-archive.mk, support/sdcc_theme.pl: added

2006-05-02 Borut Razem <borut.razem AT siol.net>

	* local/amd64-linux1.mk: added SDCCCONFIGUREFLAGS = --enable-doc
	  to configure the doc Makefile and OPT_ENABLE_DOC = 1 to run the
	  doc Makefile

2006-05-01  Bernhard Held <bernhard AT bernhardheld.de>

	* lib/bootstrap.mk (generate-setup): fixed another directory

2006-04-29  Bernhard Held <bernhard AT bernhardheld.de>

	* components/sdcc.mk (sdcc-docs): fixed install directory for docs,
	(sdcc-fromhost-install): fixed new install paths

2006-04-28  Bernhard Held <bernhard AT bernhardheld.de>

	* components/sdcc.mk (sdcc-docs): create doc dir, it's no longer
	created by 'make install' unless --enable-doc is configured
	(install): use DESTDIR instead of tweaking
	suffic, docdir and datadir
	* lib/bootstrap (generate-setup): files are installed in
	$(BUILDIR)/[prefix|datadir|docdir] =
	$(HOME)/build/sdcc-build/build/i586-mingw32msvc/sdcc/sdcc/*
	The first /sdcc/ is from BUILDDIR, the 2nd from [prefix|...].
	* local/x86-linux1-i586-mingw32msvc.mk,
	* local/x86-linux2-i586-mingw32msvc.mk,
	* local/saturn.juju.net.nz-i386-mingw32msvc.mk: SDCCINSTALLFLAGS are
	no longer needed to tweak install directories

2006-04-24  Bernhard Held <bernhard AT bernhardheld.de>

	* local/sapphire-i586-mingw32msvc.mk,
	  local/x86-linux1-i586-mingw32msvc.mk,
	  local/x86-linux2-i586-mingw32msvc.mk,
	  local/saturn.juju.net.nz-i386-mingw32msvc.mk: renamed
	  --disable-device-lib-build in --disable-device-lib
	* components/sdcc.mk: build of ucsim's sz80 is now enabled by default

2006-04-21 Borut Razem <borut.razem AT siol.net>

	* sdcc-build-bootstrap.sh, lib/fetch.mk, components/sdcc-extra.mk:
	  use "svn export" instead "svn co" to save disk space.
	  Thanks to Jim Paris.

2006-04-20 Borut Razem <borut.razem AT siol.net>

	* sdcc-build-bootstrap.sh, README,