@@ -1,0 +1,32 @@
+<p> 			
+<table border="0" cellpadding="2" cellspacing="1" width="100%" bgcolor="white">
+<tbody><tr><td width="15%" valign="top">
+	<div align="Left">
+	<b><a href="http://sdcc.sourceforge.net/"><font face="Arial,Helvetica,Geneva,Swiss,SunSans-Regular"><i>SDCC Home</i></font></a></b>
+		<div style="padding-left: 1em"><small>
+		<a href="http://sdcc.sourceforge.net/#Who"><font face="Arial,Helvetica,Geneva,Swiss,SunSans-Regular"><i>Who</i></font></a><br>
+		<a href="http://sdcc.sourceforge.net/#Platforms"><font face="Arial,Helvetica,Geneva,Swiss,SunSans-Regular"><i>Platforms</i></font></a><br>
+		<a href="http://sdcc.sourceforge.net/#Download"><font face="Arial,Helvetica,Geneva,Swiss,SunSans-Regular"><i>Download</i></font></a><br>
+		<a href="http://sdcc.sourceforge.net/#News"><font face="Arial,Helvetica,Geneva,Swiss,SunSans-Regular"><i>News</i></font></a><br>
+		<a href="http://sdcc.sourceforge.net/#Support"><font face="Arial,Helvetica,Geneva,Swiss,SunSans-Regular"><i>Support</i></font></a><br><br>
+		</small>
+		</div>
+
+	<b><a href="http://sdcc.sourceforge.net/snap.php"><font face="Arial,Helvetica,Geneva,Swiss,SunSans-Regular"><i>Snapshots</i></font></a></b>
+		<div style="padding-left: 1em"><small>
+		<a href="http://sdcc.sourceforge.net/snap.php#Linux"><font face="Arial,Helvetica,Geneva,Swiss,SunSans-Regular"><i>Linux</i></font></a><br>
+		<a href="http://sdcc.sourceforge.net/snap.php#Windows"><font face="Arial,Helvetica,Geneva,Swiss,SunSans-Regular"><i>Windows</i></font></a><br>
+		<a href="http://sdcc.sourceforge.net/snap.php#Source"><font face="Arial,Helvetica,Geneva,Swiss,SunSans-Regular"><i>Source</i></font></a><br><br>
+		</small></div>
+
+	<b><a href="http://sdcc.sourceforge.net/doc/"><font face="Arial,Helvetica,Geneva,Swiss,SunSans-Regular"><i>Documentation</i></font></a></b>
+		<div style="padding-left: 1em"><small>
+		<a href="http://sdcc.sourceforge.net/doc/sdccman.html/"><font face="Arial,Helvetica,Geneva,Swiss,SunSans-Regular"><i>SDCC Manual</i></font></a><br>
+		<a href="http://sdcc.sourceforge.net/doc/test_suite_spec.html/"><font face="Arial,Helvetica,Geneva,Swiss,SunSans-Regular"><i>Test Suite</i></font></a><br>
+		<a href="http://sdcc.sourceforge.net/doc/cdbfileformat.html/"><font face="Arial,Helvetica,Geneva,Swiss,SunSans-Regular"><i>CDB Format</i></font></a><br><br>
+		</small></div>
+
+	<b><a href="http://sdcc.sourceforge.net/links.html"><font face="Arial,Helvetica,Geneva,Swiss,SunSans-Regular"><i>Links and More!</i></font></a></b>
+	</div>
+
+<td width="85%" valign="top">
